Change Log
==========

v0.9.0
------
    * Removed support for pymongo < 3.0
    * Added ml_purge command

v0.8.0
------
    * Mongolog.find utility for searching the logs
    * flake8 compliance (mostly)

v0.7.4
------
    * Added base paramter 'max_keep' that is used for embedded documents to determine how many records to keep
    * Lower Django major version number to 1.7. 
    * embedded document type unit test
    * reference document unit test
    * Bumped mongo version up to 3.2 in .travis.yml

v0.7.3
------
    * Moved all test logging to settings.LOGGING
    * added console loggers to test.py and handlers.py
    * started custom exception.py file

v0.7.2
------
    * Added python-color-logger

v0.7.1
------
    * Added django-extensions

v0.7.0
------
    * Major bug fix in get_mongolog_handler().  monglog can now work with handlers other than those defined in the root logger.
    * fetch_results now uses aggregation framework to return results

v0.6.4
------
    * Major: added analog management command
    * internal log record: return {'uuid': 'none', 'time': 'none', 'level': 'MONGOLOG-INTERNAL'}

v0.6.3
------
    * Fixed unicode bug

v0.6.2
------
    * Added middleware request logger
    * replace kyes with . and $ with their unicode wide equivalents
    * give the middleware logger a name

v0.6.1
------
    * Added requests to the list of required packages

v0.6.0
------
    * using codacy to check code quality
    * HttpLogHandler and tests

v0.5.0
-------
    * timestamp collection added
    * uuid field added
    * Control w and j wrinte concern vairables from settings file
    * embedded document and reference documents both supported

v0.4.2
------
    * Fix stack trace formatting so it displays nicely in mongo pretty mode

v0.4.1
------
    * log message JSON serializaztion check pass or convert to str
    * total revamp of log message parser.
    * Handler classes completely revampled