@@ -5,15 +5,13 @@
 language: python
 python:
   - "2.7"
-  #- "3.4"
-  #- "3.5"
+  - "3.4"
+  - "3.5"
   - "3.6"
   - "3.7-dev"
 env:
   # Test out support for lowest/highest pymongo/django combos
-  #- PYMONGO="==2.4" DJANGO="==1.8"
-  #- PYMONGO=">=3.0" DJANGO=">=1.9" 
-  - PYMONGO=">=3.0" DJANGO="==1.9.4"
+  - PYMONGO=">=3.0" DJANGO="==1.9.8"
   - PYMONGO=">=3.0" DJANGO=">=2.0"
 # command to install dependencies
 services:
